# the-archaeologist

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  KNOWN_LIMITATIONS.md  PARAMETERS.md  PRESETS.md  TESTING.md  THIRD_PARTY.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: AnalysisEngine.cpp  AnalysisEngine.h  Artifact.h  ArtifactStore.cpp  ArtifactStore.h  ArtifactVoice.cpp  ArtifactVoice.h  DenormalGuard.h  ExcavationEngine.cpp  ExcavationEngine.h  Interpolation.h  RingBuffer.h  Transformations.cpp  Transformations.h  VoiceEngine.cpp  VoiceEngine.h
source/params/: BehaviorModes.h  Parameters.cpp  Parameters.h
source/presets/: Presets.cpp  Presets.h
source/state/: LockFreeQueue.h  Snapshot.h
source/ui/: ArchaeologistLookAndFeel.cpp  ArchaeologistLookAndFeel.h  ArchiveMapComponent.cpp  ArchiveMapComponent.h  DetailPanel.cpp  DetailPanel.h  MacroPanel.cpp  MacroPanel.h  ModeSelector.cpp  ModeSelector.h  Theme.h  TransportBar.cpp  TransportBar.h
tests/: ArtifactStoreTests.cpp  CircularBufferTests.cpp  SelectionTests.cpp  test_framework.h  test_main.cpp
tools/: RenderArchiveMap.cpp
